IceCreamShop/force-app/main/default/objects/Sale__c/fields/Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due__c</fullName>
    <label>Amount Due</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>