IceCreamShop/force-app/main/default/objects/Sale__c/fields/Cone_Or_Bowl__c.field-meta.xml
<CustomField>
    <fullName>Cone_Or_Bowl__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cone Or Bowl</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Sales</relationshipLabel>
    <relationshipName>Sales</relationshipName>
    <type>Lookup</type>
</CustomField>