IceCreamShop/force-app/main/default/objects/Sale__c/fields/Ice_Cream_Flavor__c.field-meta.xml
<CustomField>
    <fullName>Ice_Cream_Flavor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ice Cream Flavor</label>
    <referenceTo>Ice_Cream_Flavor__c</referenceTo>
    <relationshipLabel>Sales</relationshipLabel>
    <relationshipName>Sales</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>