IceCreamShop/force-app/main/default/objects/Sale__c/fields/Scoop_Number__c.field-meta.xml
<CustomField>
    <fullName>Scoop_Number__c</fullName>
    <label>Scoop Number</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>